--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -76,6 +76,23 @@ aux_links:
   "Python API tools":
     - "https://github.com/petersenpeter/brainstem_python_api_tools/"
 
+# callouts
+callouts_level: quiet # or loud
+callouts:
+  highlight:
+    color: yellow
+  important:
+    title: Important
+    color: purple
+  new:
+    title: New
+    color: green
+  note:
+    title: Note
+    color: blue
+  warning:
+    title: Warning
+    color: red
 
 # Makes Aux links open in a new tab. Default is false
 aux_links_new_tab: true
@@ -91,7 +108,7 @@ nav_sort: case_sensitive # Capital letters sorted before lowercase
 back_to_top: false
 back_to_top_text: "Back to top"
 
-footer_content: "Copyright &copy; 2019-2022 Peter Petersen. Theme: <a href=\"https://github.com/pmarsceill/just-the-docs\" target=\"_blank\">Just the Docs</a>. Support: <a href=\"https://github.com/petersenpeter/brainstem_support/issues\" target=\"_blank\">GitHub issues</a>, and <a href=\"https://github.com/petersenpeter/brainstem_support/discussions\" target=\"_blank\">GitHub Discussions</a>."
+footer_content: "Copyright &copy; 2021-2023. Theme: <a href=\"https://github.com/pmarsceill/just-the-docs\" target=\"_blank\">Just the Docs</a>. Support: <a href=\"https://github.com/petersenpeter/brainstem_support/issues\" target=\"_blank\">GitHub issues</a>, and <a href=\"https://github.com/petersenpeter/brainstem_support/discussions\" target=\"_blank\">GitHub Discussions</a>."
 
 # Footer last edited timestamp
 last_edit_timestamp: true # show or hide edit time - page must have `last_modified_date` defined in the frontmatter
