--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -21,7 +21,7 @@ title: BrainSTEM documentation
 description: A collaborative electronic lab notebook for FAIR experimental neuroscience.
 
 baseurl: "/brainstem_support" # the subpath of your site, e.g. /blog
-url: "https://brainstem-org.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://support.brainstem.org" # the base hostname & protocol for your site, e.g. http://example.com
 
 permalink: pretty
 exclude: ["node_modules/", "*.gemspec", "*.gem", "Gemfile", "Gemfile.lock", "package.json", "package-lock.json",  "script/", "LICENSE.txt", "lib/", "bin/", "README.md", "Rakefile"
