--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -132,6 +132,7 @@ ga_tracking_anonymize_ip: true # Use GDPR compliant Google Analytics settings (t
 
 plugins:
   - jekyll-seo-tag
+  - jekyll-remote-theme
 
 kramdown:
   syntax_highlighter_opts:
