--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -37,6 +37,14 @@ exclude: ["node_modules/", "*.gemspec", "*.gem", "Gemfile", "Gemfile.lock", "pac
 # Set a path/url to a logo that will be displayed instead of the title
 logo: "/assets/images/brainstem_logo_v4_documentation.png"
 
+# For copy button on code
+enable_copy_code_button: true
+
+mermaid:
+  # Version of mermaid library
+  # Pick an available version from https://cdn.jsdelivr.net/npm/mermaid/
+  version: "9.1.3"
+
 # Enable or disable the site search
 # Supports true (default) or false
 search_enabled: true
@@ -108,7 +116,7 @@ nav_sort: case_sensitive # Capital letters sorted before lowercase
 back_to_top: false
 back_to_top_text: "Back to top"
 
-footer_content: "Copyright &copy; 2021-2023. Theme: <a href=\"https://github.com/pmarsceill/just-the-docs\" target=\"_blank\">Just the Docs</a>. Support: <a href=\"https://github.com/brainstem-org/brainstem_support/issues\" target=\"_blank\">GitHub issues</a>, and <a href=\"https://github.com/brainstem-org/brainstem_support/discussions\" target=\"_blank\">GitHub Discussions</a>."
+footer_content: "Copyright &copy; 2021-2025. Theme: <a href=\"https://github.com/pmarsceill/just-the-docs\" target=\"_blank\">Just the Docs</a>. Support: <a href=\"https://github.com/brainstem-org/brainstem_support/issues\" target=\"_blank\">GitHub issues</a>, and <a href=\"https://github.com/brainstem-org/brainstem_support/discussions\" target=\"_blank\">GitHub Discussions</a>."
 
 # Footer last edited timestamp
 last_edit_timestamp: true # show or hide edit time - page must have `last_modified_date` defined in the frontmatter
@@ -133,6 +141,9 @@ ga_tracking_anonymize_ip: true # Use GDPR compliant Google Analytics settings (t
 plugins:
   - jekyll-seo-tag
   - jekyll-remote-theme
+  - jekyll-github-metadata
+  - jekyll-include-cache
+  - jekyll-sitemap
 
 kramdown:
   syntax_highlighter_opts:
